<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edPhraseInput"
        android:layout_width="407dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spCountingOption"
        android:layout_width="410dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnCount"
        android:layout_width="215dp"
        android:layout_height="49dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="98dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCountingOption" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="410dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:text="@string/msg_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="406dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/option_choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPhraseInput" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="209dp"
        android:layout_height="31dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="101dp"
        android:text="@string/result_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCount" />

</androidx.constraintlayout.widget.ConstraintLayout>